--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Angel Uriot Portfolio</title>
+		<title>Sami BEN ELHAJ SALAH Portfolio</title>
 		<link rel="shortcut icon" type="image/png" href="resources/images/Favicon.webp"/>
 
 		<meta charset="utf-8"/>
