--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<div class="content">
 						<span class="hi in_animation">Hi, my name is</span>
 						<span class="name in_animation">Sami BEN ELHAJ SALAH.</span>
-						<span class="title in_animation">I’m a Software Engineer at ONERA.</span>
+						<span class="title in_animation">I’m a Software Engineer.</span>
 						<p class="bio in_animation">
 							I’m a 23 years old french student in the engineering school
 							<a class="link" href="https://www.polytech.universite-paris-saclay.fr/en" target="_blank">Polytech Paris-Saclay</a>
