--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 						<span class="name in_animation">Sami BEN ELHAJ SALAH.</span>
 						<span class="title in_animation">I’m a Software Engineer.</span>
 						<p class="bio in_animation">
-							I’m a 23 years old french student in the engineering school
-							<a class="link" href="https://www.polytech.universite-paris-saclay.fr/en" target="_blank">Polytech Paris-Saclay</a>
-							and I study computer science. l’m open to any opportunity.
+							I’m a 32 years old Research Engineer at the French Aerospace Lab
+							<a class="link" href="https://www.onera.fr/fr" target="_blank">ONERA</a>
+							and I study computer science.
 						</p>
 						<div class="home_button in_animation">
 							<a class="button" href="#about">
