--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
 						<span class="section_title">Who am I?</span>
 						<div class="about_content">
 							<p class="p_1">
-								Hi! My name is Sami BEN ELHAJ SALAH, l’m 32 and I develop things on my free time.I hold a doctorate degree (PhD) from the University of Poitiers.
+								Hi! My name is Sami BEN ELHAJ SALAH, l’m 32 and I develop things on my free time.I hold a doctorate degree (PhD) from the University of Poitiers. 
+								I am passionate about software developement and mathematics.
 								I am highly collaborative and enjoy working in interdisciplinary teams, with a focus on clear communication and effective project challenge
 								I like mixing science and math with programming and l’m always looking for new challenges.
 								I made simulations, artificial intelligence, websites, games and more... <i>(see the
