--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 								mathematics or even computer science. It was a bit of a success because I have so far reached several million internet users.
 							</p>
 							<div class="photo">
-								<img class="in_animation" src="resources/images/Photo.webp" alt="photo" width="760px" height="760px"/>
+								<img class="in_animation" src="resources/images/photo.png" alt="photo" width="760px" height="760px"/>
 							</div>
 						</div>
 					</div>
