--- a/index.html
+++ b/index.html
@@ -150,9 +150,13 @@
 						<div class="about_content">
 							<p class="p_1">
 								Hi! My name is Sami BEN ELHAJ SALAH, l’m 32 and I develop things on my free time.I hold a doctorate degree (PhD) from the University of Poitiers. 
-								I am passionate about software developement and mathematics.
+								I am passionate about software developement and mathematics. I possess an experience and a deep understanding of object-oriented programming and algorithms.
+								I can apply this knowledge to create robust and efficient applications through my skills in C++ and Python.
+								I have a strong background in statistics, mathematics, and artificial intelligence.
+								Through my skills in machine learning, I can develop algorithms and models to solve complex problems
+								I have a strong desire to create innovative solutions, explore new technologies, and push the boundaries.
 								I am highly collaborative and enjoy working in interdisciplinary teams, with a focus on clear communication and effective project challenge
-								I like mixing science and math with programming and l’m always looking for new challenges.
+								<!-- I like mixing science and math with programming and l’m always looking for new challenges. 
 								I made simulations, artificial intelligence, websites, games and more... <i>(see the
 								<a class="link" href="#projects">project</a> part of the site)</i>.
 								<br/><br/>
@@ -166,9 +170,10 @@
 								<a class="link" href="https://www.youtube.com/c/DIMENSI0N" target="_blank">Dimension</a>.
 								It is a 5 minutes animated video format where I talk about many topics such as astrophysics,
 								mathematics or even computer science. It was a bit of a success because I have so far reached several million internet users.
+								-->
 							</p>
 							<div class="photo">
-								<img class="in_animation" src="resources/images/photo.png" alt="photo" width="760px" height="760px"/>
+								<img class="in_animation" src="resources/images/photo.png" alt="photo" width="720px" height="720px"/>
 							</div>
 						</div>
 					</div>
