--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
 						<span class="section_title">Who am I?</span>
 						<div class="about_content">
 							<p class="p_1">
-								Hi! My name is Sami BEN ELHAJ SALAH, l’m 32 and I develop things on my free time.I hold a doctorate degree (PhD) from the University of Poitiers. 
+								Hi! My name is Sami BEN ELHAJ SALAH, l’m 32 and I develop things on my free time. I hold a doctorate degree (PhD) from the University of Poitiers. 
 								I am passionate about software developement and mathematics. I possess an experience and a deep understanding of object-oriented programming and algorithms.
 								I can apply this knowledge to create robust and efficient applications through my skills in C++ and Python.
 								I have a strong background in statistics, mathematics, and artificial intelligence.
-								Through my skills in machine learning, I can develop algorithms and models to solve complex problems
+								Through my skills in machine learning, I can develop algorithms and models to solve complex problems. 			
 								I have a strong desire to create innovative solutions, explore new technologies, and push the boundaries.
-								I am highly collaborative and enjoy working in interdisciplinary teams, with a focus on clear communication and effective project challenge
+								I am highly collaborative and enjoy working in interdisciplinary teams, with a focus on clear communication and effective project challenge.
 								<!-- I like mixing science and math with programming and l’m always looking for new challenges. 
 								I made simulations, artificial intelligence, websites, games and more... <i>(see the
 								<a class="link" href="#projects">project</a> part of the site)</i>.
@@ -173,7 +173,7 @@
 								-->
 							</p>
 							<div class="photo">
-								<img class="in_animation" src="resources/images/photo.png" alt="photo" width="720px" height="720px"/>
+								<img class="in_animation" src="resources/images/photo.png" alt="photo" width="680px" height="680px"/>
 							</div>
 						</div>
 					</div>
