add linked in and github

--- a/index.html
+++ b/index.html
@@ -235,24 +235,24 @@
 						<span class="section_title">How to contact me?</span>
 						<div class="contact_content">
 							<div class="social_line">
-								<a class="social_link" href="https://www.linkedin.com/in/angel-uriot/" target="_blank" style="--size: 119.13px;">
+								<a class="social_link" href="https://www.linkedin.com/in/sami-ben-elhaj-salah/" target="_blank" style="--size: 119.13px;">
 									<img src="resources/svgs/contact/Linkedin.svg" alt="linkedin" width="50px" height="50px"/>
 									<div class="social_text">
-										<span>in/angel-uriot</span>
+										<span>in/sami-ben-elhaj-salah</span>
 									</div>
 								</a>
-								<a class="social_link" href="https://twitter.com/DIMENSION_YT" target="_blank"  style="--size: 160px;">
+								<!-- <a class="social_link" href="https://twitter.com/DIMENSION_YT" target="_blank"  style="--size: 160px;"> 
 									<img src="resources/svgs/contact/Twitter.svg" alt="twitter" width="50px" height="50px"/>
 									<div class="social_text">
 										<span>@DIMENSION_YT</span>
 									</div>
-								</a>
+								</a>-->
 							</div>
 							<div class="social_line">
-								<a class="social_link" href="https://github.com/angeluriot" target="_blank" style="--size: 90.65px;">
+								<a class="social_link" href="https://github.com/samibenelhajsalah" target="_blank" style="--size: 90.65px;">
 									<img src="resources/svgs/contact/GitHub.svg" alt="github" width="50px" height="50px"/>
 									<div class="social_text">
-										<span>angeluriot</span>
+										<span>samibenelhajsalah</span>
 									</div>
 								</a>
 								<a class="social_link" href="https://discord.gg/WSvpcA3jJu" target="_blank" style="--size: 168px;">
