--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
 							</div>
 							<div class="social_line">
 								<div class="social_link" style="--size: 202.84px;">
-									<a href="mailto: angel.uriot@gmail.com" target="_blank">
+									<a href="mailto: sami.bhs.91@gmail.com" target="_blank">
 										<img src="resources/svgs/contact/Mail.svg" alt="mail" width="50px" height="50px"/>
 									</a>
 									<div class="social_text">
-										<span>angel.uriot@gmail.com</span>
+										<span>sami.bhs.91@gmail.com</span>
 									</div>
 								</div>
 							</div>
