delete discord from contact me

--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
 										<span>samibenelhajsalah</span>
 									</div>
 								</a>
-								<a class="social_link" href="https://discord.gg/WSvpcA3jJu" target="_blank" style="--size: 168px;">
+								<!-- <a class="social_link" href="https://discord.gg/WSvpcA3jJu" target="_blank" style="--size: 168px;">
 									<img src="resources/svgs/contact/Discord.svg" alt="discord" width="50px" height="50px"/>
 									<div class="social_text">
 										<span>DIMENSION CODE</span>
 									</div>
-								</a>
+								</a>-->
 							</div>
 							<div class="social_line">
 								<div class="social_link" style="--size: 202.84px;">
