--- a/index.html
+++ b/index.html
@@ -172,9 +172,7 @@
 								mathematics or even computer science. It was a bit of a success because I have so far reached several million internet users.
 								-->
 							</p>
-							<div class="photo">
-								<img class="in_animation" src="resources/images/photo.png" alt="photo" width="680px" height="680px"/>
-							</div>
+								<img src="resources/images/photo.png" alt="photo sami" width="200px" height="200px" style="border-radius: 50%;">
 						</div>
 					</div>
 				</section>
@@ -186,21 +184,39 @@
 				<a id="projects"></a>
 				<section class="section" id="projects_section">
 					<div class="content leaning">
-						<span class="section_title">Some of my Projects</span>
-						<div class="sort_choices">
-							<span class="label">Sort by</span>
-							<div class="choice selected">Default</div>
-							<div class="choice">Date</div>
-							<div class="choice">School</div>
-							<div class="choice">Personal</div>
-							<div class="choice">Web</div>
-							<div class="choice">Simulations</div>
-							<div class="choice">AI</div>
+						<span class="section_title">A summary of My Resume</span>
+						<div class="resume-container">
+							<div class="resume-section">
+								<h3 class="resume-title">My Education</h3>
+								<div class="resume-item">
+									<h4 class="title">Master in Computer Engineering</h4>
+									<h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+									<p class="resume-description">List skill/technologies here. You can change the icon above 
+									to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+								</div>
+								<hr>
+								<div class="resume-item">
+									<h4 class="title">Master in Computer Engineering</h4>
+									<h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+									<p class="resume-description">List skill/technologies here. You can change the icon above 
+									to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+								</div>
+								<hr>
+							</div>
+							<div class="resume-section">
+								<h3 class="resume-title">My Experience</h3>
+								<div class="resume-item">
+									<h4 class="title">Master in Computer Engineering</h4>
+									<h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+									<p class="resume-description">List skill/technologies here. You can change the icon above 
+									to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+								</div>
+								<hr>
+							</div>
 						</div>
-						<div class="projects_content"></div>
-						<div class="other_projects_content"></div>
 					</div>
 				</section>
+				
 				<div class="section_end projects_end"></div>
 
 				<link rel="stylesheet" type="text/css" href="css/skills.css"/>
@@ -230,9 +246,60 @@
 				<link rel="stylesheet" type="text/css" href="css/contact.css"/>
 
 				<a id="contact"></a>
-				<section class="section" id="contact_section">
+				<section class="section" id="projects_section">
 					<div class="content leaning">
-						<span class="section_title">How to contact me?</span>
+						<span class="section_title">Contact</span>
+						<div class="resume-container">
+							<div class="resume-section left-section">
+								<h3 class="section_title">Let's Connect</h3>
+								<p class="section-description">
+									Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+								</p>
+								<br>
+								<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+								<a href="https://github.com/samibenelhajsalah" class="icon-github">
+									<i class="fab fa-github"></i> <!-- Utilisation de l'icône Twitter de Font Awesome -->
+								</a>
+								<a href="" class="icon-twitter">
+									<i class="fab fa-twitter"></i> <!-- Utilisation de l'icône Twitter de Font Awesome -->
+								</a>
+								<a href="https://www.linkedin.com/in/sami-ben-elhaj-salah/" class="icon-linkedin">
+									<i class="fab fa-linkedin-in"></i> <!-- Utilisation de l'icône Twitter de Font Awesome -->
+								</a>
+							</div>
+							<div class="resume-section right-section">
+								<h3 class="section_title">Let's Message Me</h3>
+								<form class="contact-form" method="POST" action="https://formspree.io/f/xwkjwjzl">
+									<div class="form-group form-inline">
+										<label class="sr-only" for="inputName">Name</label>
+										<input type="text" name="name" class="form-control w-100" id="inputName" placeholder="Name" required>
+									  </div>
+									  <div class="form-group form-inline">
+										<label class="sr-only" for="inputEmail">Email</label>
+										<input type="email" name="email" class="form-control w-100" id="inputEmail" placeholder="Email" required>
+									  </div>
+									  <div class="form-group">
+										<label class="sr-only" for="inputMessage">Message</label>
+										<textarea name="message" class="form-control" id="inputMessage" rows="5" placeholder="Message" required></textarea>
+									  </div>
+									  <input type="submit" value="Send">
+								</form>
+							</div>
+						</div>
+					</div>
+				</section>
+				<div class="section_end projects_end"></div>
+
+				<link rel="stylesheet" type="text/css" href="css/skills.css"/>
+
+				<a id="skills"></a>
+				<section class="section" id="skills_section">
+					<div class="content leaning">
+						<span class="section_title">What are my Skills?</span>
+						<div class="skills_content">
+							<div class="box"></div>
+						</div>
+						<!--<span class="section_title">How to contact me?</span>
 						<div class="contact_content">
 							<div class="social_line">
 								<a class="social_link" href="https://www.linkedin.com/in/sami-ben-elhaj-salah/" target="_blank" style="--size: 119.13px;">
@@ -241,12 +308,12 @@
 										<span>in/sami-ben-elhaj-salah</span>
 									</div>
 								</a>
-								<!-- <a class="social_link" href="https://twitter.com/DIMENSION_YT" target="_blank"  style="--size: 160px;"> 
+								<a class="social_link" href="https://twitter.com/DIMENSION_YT" target="_blank"  style="--size: 160px;"> 
 									<img src="resources/svgs/contact/Twitter.svg" alt="twitter" width="50px" height="50px"/>
 									<div class="social_text">
 										<span>@DIMENSION_YT</span>
 									</div>
-								</a>-->
+								</a>
 							</div>
 							<div class="social_line">
 								<a class="social_link" href="https://github.com/samibenelhajsalah" target="_blank" style="--size: 90.65px;">
@@ -255,12 +322,12 @@
 										<span>samibenelhajsalah</span>
 									</div>
 								</a>
-								<!-- <a class="social_link" href="https://discord.gg/WSvpcA3jJu" target="_blank" style="--size: 168px;">
+								<a class="social_link" href="https://discord.gg/WSvpcA3jJu" target="_blank" style="--size: 168px;">
 									<img src="resources/svgs/contact/Discord.svg" alt="discord" width="50px" height="50px"/>
 									<div class="social_text">
 										<span>DIMENSION CODE</span>
 									</div>
-								</a>-->
+								</a>
 							</div>
 							<div class="social_line">
 								<div class="social_link" style="--size: 202.84px;">
@@ -272,7 +339,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div>-->
 					</div>
 				</section>
 
