--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-		<meta name="description" content="Angel Uriot portfolio."/>
+		<meta name="description" content="Sami BEN ELHAJ SALAH portfolio."/>
 
 		<meta property="og:locale" content="en_US"/>
 		<meta property="og:type" content="website"/>
@@ -18,11 +18,11 @@
 		<meta property="og:image:type" content="image/png"/>
 		<meta property="og:image:width" content="1920"/>
 		<meta property="og:image:height" content="1080"/>
-		<meta property="og:title" content="Angel Uriot Portfolio"/>
-		<meta property="og:site_name" content="Angel Uriot Portfolio"/>
-		<meta property="og:description" content="Angel Uriot portfolio."/>
-		<meta name="twitter:title" content="Angel Uriot Portfolio"/>
-		<meta name="twitter:description" content="Angel Uriot portfolio."/>
+		<meta property="og:title" content="Sami BEN ELHAJ SALAH Portfolio"/>
+		<meta property="og:site_name" content="Sami BEN ELHAJ SALAH Portfolio"/>
+		<meta property="og:description" content="Sami BEN ELHAJ SALAH portfolio."/>
+		<meta name="twitter:title" content="Sami BEN ELHAJ SALAH Portfolio"/>
+		<meta name="twitter:description" content="Sami BEN ELHAJ SALAH portfolio."/>
 		<meta name="twitter:image" content="https://www.angeluriot.com/portfolio/resources/images/Social.png"/>
 		<meta name="twitter:card" content="summary_large_image"/>
 		<meta name="twitter:site" content="@DIMENSION_YT"/>
