--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 		<meta property="og:locale" content="en_US"/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:url" content="https://www.angeluriot.com/portfolio/"/>
-		<meta property="og:image" content="https://www.angeluriot.com/portfolio/resources/images/Social.png"/>
+		<meta property="og:url" content="https://samibenelhajsalah.github.io/Portfolio/"/>
+		<!-- <meta property="og:image" content="https://www.angeluriot.com/portfolio/resources/images/Social.png"/> 
 		<meta property="og:image:url" content="https://www.angeluriot.com/portfolio/resources/images/Social.png"/>
-		<meta property="og:image:secure_url" content="https://www.angeluriot.com/portfolio/resources/images/Social.png"/>
+		<meta property="og:image:secure_url" content="https://www.angeluriot.com/portfolio/resources/images/Social.png"/>-->
 		<meta property="og:image:type" content="image/png"/>
 		<meta property="og:image:width" content="1920"/>
 		<meta property="og:image:height" content="1080"/>
