--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<meta property="og:locale" content="en_US"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:url" content="https://samibenelhajsalah.github.io/Portfolio/"/>
-		<meta property="og:image" content="https://www.angeluriot.com/portfolio/resources/images/social_sami.png"/> 
-		<meta property="og:image:url" content="https://www.angeluriot.com/portfolio/resources/images/social_sami.png"/>
-		<meta property="og:image:secure_url" content="https://www.angeluriot.com/portfolio/resources/images/social_sami.png"/>
+		<meta property="og:image" content="https://samibenelhajsalah.github.io/Portfolio/resources/images/social_sami.png"/> 
+		<meta property="og:image:url" content="https://samibenelhajsalah.github.io/Portfolio/resources/images/social_sami.png"/>
+		<meta property="og:image:secure_url" content="https://samibenelhajsalah.github.io/Portfolio/resources/images/social_sami.png"/>
 		<meta property="og:image:type" content="image/png"/>
 		<meta property="og:image:width" content="1920"/>
 		<meta property="og:image:height" content="1080"/>
@@ -23,7 +23,7 @@
 		<meta property="og:description" content="Sami BEN ELHAJ SALAH portfolio."/>
 		<meta name="twitter:title" content="Sami BEN ELHAJ SALAH Portfolio"/>
 		<meta name="twitter:description" content="Sami BEN ELHAJ SALAH portfolio."/>
-		<meta name="twitter:image" content="https://www.angeluriot.com/portfolio/resources/images/Social.png"/>
+		<meta name="twitter:image" content="https://samibenelhajsalah.github.io/Portfolio/resources/images/social_sami.png"/>
 		<meta name="twitter:card" content="summary_large_image"/>
 		<meta name="twitter:site" content="@DIMENSION_YT"/>
 
