commit afetr merge with chnage-name-when-in-link

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 									<p class="resume-description"> 
 										<p class="resume-description" style="margin-left: 20px; color: blanchedalmond;">
 											scientific Computing Research Engincientific Computing Research Engincientific Computing Research 
-											Engincientific Computing Research Engin
+											Engincientific Computing Research Engin Sami
 										</p>
 									</p>
 								</div>
