delete Project from navbar

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 						<ol>
 							<li class="home in_animation"><a class="not_button" href="#home">Home</a></li>
 							<li class="about in_animation"><a class="not_button" href="#about">About</a></li>
-							<li class="projects in_animation"><a class="not_button" href="#projects">Projects</a></li>
-							<li class="skills in_animation"><a class="not_button" href="#skills">Skills</a></li>
 							<li class="experience in_animation"><a class="not_button" href="#experience">Experience</a></li>
+							<!-- <li class="projects in_animation"><a class="not_button" href="#projects">Projects</a></li> -->
+							<li class="skills in_animation"><a class="not_button" href="#skills">Skills</a></li>
+							<!-- <li class="experience in_animation"><a class="not_button" href="#experience">Experience</a></li> -->
 							<li class="contact in_animation">
 								<a class="button" href="#contact">
 									<p>Contact</p>
@@ -99,9 +100,10 @@
 				<ol>
 					<li class="home"><a class="not_button" href="#home">Home</a></li>
 					<li class="about"><a class="not_button" href="#about">About</a></li>
-					<li class="projects"><a class="not_button" href="#projects">Projects</a></li>
-					<li class="skills"><a class="not_button" href="#skills">Skills</a></li>
 					<li class="experience"><a class="not_button" href="#experience">Experience</a></li>
+					<!-- <li class="projects"><a class="not_button" href="#projects">Projects</a></li> -->
+					<li class="skills"><a class="not_button" href="#skills">Skills</a></li>
+					<!-- <li class="experience"><a class="not_button" href="#experience">Experience</a></li> -->
 					<li class="contact">
 						<a class="button" href="#contact">
 							<p>Contact</p>
@@ -181,8 +183,8 @@
 				<link rel="stylesheet" type="text/css" href="css/projects.css"/>
 				<link rel="stylesheet" type="text/css" href="css/other_projects.css"/>
 
-				<a id="projects"></a>
-				<section class="section" id="projects_section">
+				<a id="experience"></a>
+				<section class="section" id="experience_section">
 					<div class="content leaning">
 						<span class="section_title">A summary of My Resume</span>
 						<div class="resume-container">
