add item on experience + add cv + delete I m a + clean My Education

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<div class="content">
 						<span class="hi in_animation">Hi, my name is</span>
 						<span class="name in_animation">Sami BEN ELHAJ SALAH.</span>
-						<span class="title in_animation">I’m a Software Engineer.</span>
+						<span class="title in_animation">Software Engineer.</span>
 						<p class="bio in_animation">
 							I’m a 32 years old Research Engineer at the French Aerospace Lab
 							<a class="link" href="https://www.onera.fr/fr" target="_blank">ONERA</a>
@@ -193,8 +193,9 @@
 								<div class="resume-item">
 									<h4 class="title">Scientific Baccalaureate with honours.</h4>
 									<h5 class="sub-title">Tunisia / 2010</h5>
-									<p class="resume-description"> List skill/technologies here. You can change the icon above 
-									to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+									<!-- <p class="resume-description"> List skill/technologies here. You can change the icon above  -->
+									<!-- to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.-->
+									</p> 
 								</div>
 								<hr>
 								<div class="resume-item">
@@ -219,22 +220,32 @@
 									<h4 class="title">Software engineer specializing in cloud storage and backup applications.</h4>
 									<h5 class="sub-title">consultant at ATEMPO / 2019 -2020</h5>
 									<p class="resume-description">
+										<ul style="margin-left: 40px;">
+											<li style="color: blanchedalmond;">Designing cloud infrastructure architectures</li>
+											<li style="color: blanchedalmond;">Project management: Scrum, JIRA, Confluence</li>
+										</ul>
+									</p>
 								</div>
 								<hr>
 								<div class="resume-item">
 									<h4 class="title">Postdoctoral Research: Utilizing Deep Learning Algorithms to solve real industrial problems.</h4>
 									<h5 class="sub-title">École des Mines de Saint-Étienne & Mines ParisTech Sophia Antipolis / 2020 - 2021.</h5>
 									<p class="resume-description">
+										<ul style="margin-left: 40px;">
+											<li style="color: blanchedalmond;">Kernel Design</li>
+											<li style="color: blanchedalmond;">Gaussian Process</li>
+										</ul>
+									</p>
 								</div>
 								<hr>
 								<div class="resume-item">
 									<h4 class="title">Software and Scientific Computing Research Engineer</h4>
 									<h5 class="sub-title">ISAE-ENSMA , Institut Pprime / 2022</h5>
 									<p class="resume-description"> 
-										<p class="resume-description" style="margin-left: 20px; color: blanchedalmond;">
-											scientific Computing Research Engincientific Computing Research Engincientific Computing Research 
-											Engincientific Computing Research Engin Sami
-										</p>
+										<ul style="margin-left: 40px;">
+											<li style="color: blanchedalmond;">Finite element solver implementation.</li>
+											<li style="color: blanchedalmond;">Integration of the Petsc library</li>
+										</ul>
 									</p>
 								</div>
 								<hr>
@@ -243,9 +254,8 @@
 									<h5 class="sub-title">Office national d'études et de recherches aérospatiales (ONERA)  / Since 2023</h5>
 									<p class="resume-description"> 
 										<ul style="margin-left: 40px;">
-											<li style="color: blanchedalmond;">oral Research: Utilizing Deep Learning Algorithms to solve real industrial problems</li>
-											<li style="color: blanchedalmond;">Item 2</li>
-											<li style="color: blanchedalmond;">Item 3</li>
+											<li style="color: blanchedalmond;">High-performance finite element solver implementation</li>
+											<li style="color: blanchedalmond;">Software architecture</li>
 										</ul>
 									</p>	
 								</div>
@@ -254,7 +264,7 @@
 						</div>
 						<!-- <br> -->
 						<div class="resume-button">
-							<a href="https://github.com/samibenelhajsalah/cours_ENSMA/blob/main/cours_ONERA_ENSMA_01_02_2024_Sami_BEN_ELHAJ_SALAH.pdf" download class="btn-primary">
+							<a href="https://github.com/samibenelhajsalah/CV/blob/main/CV_Sami_BEN_ELHAJ_SALAH.pdf" download class="btn-primary">
 								<i class="fa-solid fa-download"></i> 
 								<span class="btn-text">Download CV</span>
 							</a>
@@ -334,9 +344,9 @@
 								<a href="https://github.com/samibenelhajsalah" class="icon-github">
 									<i class="fab fa-github"></i> <!-- Utilisation de l'icône Twitter de Font Awesome -->
 								</a>
-								<a href="" class="icon-twitter">
-									<i class="fab fa-twitter"></i> <!-- Utilisation de l'icône Twitter de Font Awesome -->
-								</a>
+								<!-- <a href="" class="icon-twitter"> -->
+									<!-- <i class="fab fa-twitter"></i>  -->
+								<!-- </a> -->
 								<a href="https://www.linkedin.com/in/sami-ben-elhaj-salah/" class="icon-linkedin">
 									<i class="fab fa-linkedin-in"></i> <!-- Utilisation de l'icône Twitter de Font Awesome -->
 								</a>
