--- a/index.html
+++ b/index.html
@@ -260,6 +260,17 @@
 									</p>	
 								</div>
 								<hr>
+								<div class="resume-item">
+									<h4 class="title">Artificial Intelligence Engineer and Data Scientist | Data Engineer.</h4>
+									<h5 class="sub-title">Safran Tech - Paris-Saclay since 2024</h5>
+									<p class="resume-description">
+										<ul style="margin-left: 40px;">
+											<li style="color: blanchedalmond;">ML methods in alloy design</li>
+											<li style="color: blanchedalmond;">Data acquisition strategies / Data Mining</li>
+										</ul>
+									</p>
+								</div>
+								<hr>
 							</div>
 						</div>
 						<!-- <br> -->
