add new picture for Sami

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 								mathematics or even computer science. It was a bit of a success because I have so far reached several million internet users.
 								-->
 							</p>
-								<img src="resources/images/photo.png" alt="photo sami" width="200px" height="200px" style="border-radius: 50%;">
+								<img src="resources/images/photo_sami.png" alt="photo sami" width="200px" height="200px" style="border-radius: 50%;">
 						</div>
 					</div>
 				</section>
