change age + add link safran instead of onera

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 						<span class="name in_animation">Sami BEN ELHAJ SALAH.</span>
 						<span class="title in_animation">Software Engineer.</span>
 						<p class="bio in_animation">
-							I’m a 32 years old Research Engineer at the French Aerospace Lab
-							<a class="link" href="https://www.onera.fr/fr" target="_blank">ONERA</a>
+							I’m a 33 years old Research Engineer at 
+							<a class="link" href="https://www.safran-group.com/" target="_blank">Safran Tech</a>
 							and I study computer science.
 						</p>
 						<div class="home_button in_animation">
@@ -151,7 +151,7 @@
 						<span class="section_title">Who am I?</span>
 						<div class="about_content">
 							<p class="p_1">
-								Hi! My name is Sami BEN ELHAJ SALAH, l’m 32 and I develop things on my free time. I hold a doctorate degree (PhD) from the University of Poitiers. 
+								Hi! My name is Sami BEN ELHAJ SALAH, l’m 33 and I develop things on my free time. I hold a doctorate degree (PhD) from the University of Poitiers. 
 								I am passionate about software developement and mathematics. I possess an experience and a deep understanding of object-oriented programming and algorithms.
 								I can apply this knowledge to create robust and efficient applications through my skills in C++ and Python.
 								I have a strong background in statistics, mathematics, and artificial intelligence.
