--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 								<h3 class="resume-title">My Experience</h3>
 								<div class="resume-item">
 									<h4 class="title">Software engineer specializing in cloud storage and backup applications.</h4>
-									<h5 class="sub-title">consultant at ATEMPO / 2019 -2020</h5>
+									<h5 class="sub-title">consultant at ATEMPO / 2019-2020</h5>
 									<p class="resume-description">
 										<ul style="margin-left: 40px;">
 											<li style="color: blanchedalmond;">Designing cloud infrastructure architectures</li>
@@ -229,7 +229,7 @@
 								<hr>
 								<div class="resume-item">
 									<h4 class="title">Postdoctoral Research: Utilizing Deep Learning Algorithms to solve real industrial problems.</h4>
-									<h5 class="sub-title">École des Mines de Saint-Étienne & Mines ParisTech Sophia Antipolis / 2020 - 2021.</h5>
+									<h5 class="sub-title">École des Mines de Saint-Étienne & Mines ParisTech Sophia Antipolis / 2020-2021.</h5>
 									<p class="resume-description">
 										<ul style="margin-left: 40px;">
 											<li style="color: blanchedalmond;">Kernel Design</li>
@@ -251,7 +251,7 @@
 								<hr>
 								<div class="resume-item">
 									<h4 class="title">Software and Scientific Computing Research Engineer</h4>
-									<h5 class="sub-title">Office national d'études et de recherches aérospatiales (ONERA)  / Since 2023</h5>
+									<h5 class="sub-title">Office national d'études et de recherches aérospatiales (ONERA) / 2023-2024</h5>
 									<p class="resume-description"> 
 										<ul style="margin-left: 40px;">
 											<li style="color: blanchedalmond;">High-performance finite element solver implementation</li>
@@ -262,7 +262,7 @@
 								<hr>
 								<div class="resume-item">
 									<h4 class="title">Artificial Intelligence Engineer and Data Scientist | Data Engineer.</h4>
-									<h5 class="sub-title">Safran Tech - Paris-Saclay since 2024</h5>
+									<h5 class="sub-title">Safran Tech - Paris-Saclay / since 2024</h5>
 									<p class="resume-description">
 										<ul style="margin-left: 40px;">
 											<li style="color: blanchedalmond;">ML methods in alloy design</li>
